force-app/main/default/objects/Contract_Finder_Integration__c/Contract_Finder_Integration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Setting for Contract Finder Integarion</description>
    <label>Contract Finder Integration</label>
</CustomObject>