force-app/main/default/objects/Contract_Finder_Integration__c/fields/Test_Credentials__c.field-meta.xml
<CustomField>
    <fullName>Test_Credentials__c</fullName>
    <description>Holds username:password encoded, for sandboxes</description>
    <label>Test Credentials</label>
    <length>255</length>
    <type>Text</type>
</CustomField>