force-app/main/default/objects/Contract_Finder_Integration__c/fields/Test_URL__c.field-meta.xml
<CustomField>
    <fullName>Test_URL__c</fullName>
    <description>Holds api url for sandboxes</description>
    <label>Test URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>